Tue Jul 05 01:20:59 GMT 2011  Olly Betts <olly@survex.com>

	* common/debuglog.h: Add QUERY category for debug logging.

Fri Jul 01 04:55:02 GMT 2011  Olly Betts <olly@survex.com>

	* common/unordered_map.h: Add my <unordered_map> portability wrapper
	  which was used by the JNI java bindings.  It's not currently used
	  here, but is likely to be useful (two of the GSoC projects are
	  using unordered_map).

Wed Jun 29 12:16:59 GMT 2011  Richard Boulton <richard@tartarus.org>

	* languages/compiler/tokeniser.c: Fix memory leak (of file name) in
	  snowball compiler introduced by last commit.

Wed Jun 29 07:49:36 GMT 2011  Olly Betts <olly@survex.com>

	* languages/compiler/: Report "FILE:LINE:" before each error so tools
	  like vim's quickfix mode can parse this and bring up the line with
	  the error automatically.

Wed Jun 29 07:49:10 GMT 2011  Olly Betts <olly@survex.com>

	* languages/compiler/header.h: Add comments to note that struct input
	  must be a prefix of struct tokeniser.

Wed Jun 29 07:47:30 GMT 2011  Olly Betts <olly@survex.com>

	* languages/basque.sbl: Use stringdef instead of literal accented
	  characters in the code.

Wed Jun 29 07:13:30 GMT 2011  Olly Betts <olly@survex.com>

	* docs/stemming.rst,include/xapian/stem.h,languages/: Add stemmers
	  for Armenian (hy), Basque (eu), and Catalan (ca).

Mon Jun 27 08:16:55 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/query.h: Add a fake specialised form of the templated
	  ctor for SWIG.

Sat Jun 25 11:27:00 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Fix doc comment typo which reversed the
	  intended sense.

Sat Jun 25 06:20:34 GMT 2011  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/omenquireinternal.h: Remove unused method
	  Enquire::Internal::register_match_decider().

Sat Jun 25 06:05:22 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: MSet(MSet::Internal *) -> MSet(Internal *)
	  for consistency with other classes.
